--- a/funkopop.html
+++ b/funkopop.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="Imagens/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funko Pop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -152,19 +153,6 @@
         </div>
     </div>
 
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        <!-- Toast “produto adicionado” -->
-        <div id="toastCarrinho" class="toast align-items-center text-bg-success border-0" role="alert">
-            <div class="d-flex">
-                <div id="toastBody" class="toast-body">
-                    Produto adicionado ao carrinho!
-                </div>
-                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
-            </div>
-        </div>
-    </div>
-
-
     <!-- Script para adicionar produto ao carrinho -->
     <script>
         function adicionarAoCarrinho(nome, preco) {
@@ -197,11 +185,10 @@
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>  
-</body>
 <footer class="footer text-center">
     <div class="container">
         <h5>GeekStore</h5>
-        <p>&copy; 2023 GeekStore. Todos os direitos reservados.</p>
+        <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
         <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a
                 href="camisetas.html">Camisetas</a> | <a href="gamers.html">Gamers</a> | <a
                 href="acessorios.html">Acessórios</a></p>
@@ -218,8 +205,6 @@
             <a href="https://www.tiktok.com/" class="btn btn-secondary"><i class="bi bi-tiktok"></i></a>
         </div>
     </div>
-   
 </footer>
-
-
+</body>
 </html>
