--- a/index.html
+++ b/index.html
@@ -2,43 +2,17 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <link rel="icon" href="Imagens/favicon.ico" type="image/x-icon" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>GeekStore</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <style>
-    .newsletter-flutuante {
-      display: none;
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      z-index: 1000;
-      width: 300px;
-    }
 
-    .newsletter-flutuante h3 {
-      margin-top: 0;
-    }
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
-    .newsletter-fechar {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-      cursor: pointer;
-      font-size: 20px;
-      color: #999;
-    }
-
-    .card-title {
-      font-weight: 600;
-    }
-  </style>
+  <!-- CSS customizado -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -52,113 +26,112 @@
       .catch(error => console.error('Erro ao carregar o menu:', error));
   </script>
 
-  <div class="newsletter-flutuante" id="newsletterBox">
-    <span class="newsletter-fechar" onclick="document.getElementById('newsletterBox').style.display='none';">&times;</span>
-    <h3>Assine a Newsletter</h3>
+  <div class="newsletter-flutuante" id="newsletterBox" role="dialog" aria-modal="true" aria-labelledby="newsletterTitle">
+    <button class="newsletter-fechar" aria-label="Fechar Newsletter" onclick="document.getElementById('newsletterBox').classList.remove('show')">&times;</button>
+    <h3 id="newsletterTitle">Assine a Newsletter</h3>
     <p>Receba novidades no seu e-mail!</p>
     <form action="https://SEU_BACKEND_OU_SERVICO.com" method="POST">
-      <input type="email" name="email" class="form-control mb-2" placeholder="Seu e-mail" required>
+      <input type="email" name="email" class="form-control mb-3" placeholder="Seu e-mail" required aria-label="Seu e-mail" />
       <button type="submit" class="btn btn-primary w-100">Inscrever-se</button>
     </form>
   </div>
+
   <script>
     setTimeout(() => {
-      document.getElementById('newsletterBox').style.display = 'block';
+      const box = document.getElementById('newsletterBox');
+      box.classList.add('show');
     }, 5000);
   </script>
 
-  <div class="container mt-5 pt-5">
-    <div id="carouselExampleInterval" class="carousel slide mb-5" data-bs-ride="carousel">
-      <div class="carousel-inner rounded shadow">
+  <main class="container mt-5 pt-4">
+    <div id="carouselExampleInterval" class="carousel slide mb-5" data-bs-ride="carousel" aria-label="Galeria de imagens">
+      <div class="carousel-inner rounded shadow-sm">
         <div class="carousel-item active" data-bs-interval="10000">
-          <img src="Imagens/carrosel 1.webp" class="d-block w-100" alt="Slide 1">
+          <img src="Imagens/carrosel 1.webp" class="d-block w-100" alt="Slide 1 - Produtos Geek" />
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="Imagens/carrosel 2.webp" class="d-block w-100" alt="Slide 2">
+          <img src="Imagens/carrosel 2.webp" class="d-block w-100" alt="Slide 2 - Produtos Geek" />
         </div>
         <div class="carousel-item">
-          <img src="Imagens/carrosel 3.webp" class="d-block w-100" alt="Slide 3">
+          <img src="Imagens/carrosel 3.webp" class="d-block w-100" alt="Slide 3 - Produtos Geek" />
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev" aria-label="Slide anterior">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next" aria-label="Próximo slide">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
       </button>
     </div>
 
-    <h2 class="text-center mb-4">Acesse Já Nossas Novidades</h2>
-    <div class="row">
-      <div class="col-md-4 mb-4">
+    <h2 class="text-center mb-5 fw-bold">Acesse Já Nossas Novidades</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="Imagens/Funko Pop Pink Panther.webp" class="card-img-top" alt="Funko Pop">
-          <div class="card-body">
+          <img src="Imagens/Funko Pop Pink Panther.webp" class="card-img-top" alt="Funko Pop Pink Panther" />
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">Funko Pops</h5>
-            <a href="funkopop.html" class="btn btn-primary w-100">Acesse Já</a>
+            <a href="funkopop.html" class="btn btn-primary mt-auto w-100" aria-label="Acesse a página de Funko Pops">Acesse Já</a>
           </div>
         </div>
       </div>
 
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="Imagens/camiseta rick and morty.webp" class="card-img-top" alt="Camiseta Rick and Morty">
-          <div class="card-body">
+          <img src="Imagens/camiseta rick and morty.webp" class="card-img-top" alt="Camiseta Rick and Morty" />
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">Camisetas</h5>
-            <a href="camisetas.html" class="btn btn-primary w-100">Acesse Já</a>
+            <a href="camisetas.html" class="btn btn-primary mt-auto w-100" aria-label="Acesse a página de Camisetas">Acesse Já</a>
           </div>
         </div>
       </div>
 
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="Imagens/exemplo_acessorio.webp" class="card-img-top" alt="Acessórios Geek">
-          <div class="card-body">
+          <img src="Imagens/exemplo_acessorio.webp" class="card-img-top" alt="Acessórios Geek" />
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">Acessórios</h5>
-            <a href="acessorios.html" class="btn btn-primary w-100">Acesse Já</a>
+            <a href="acessorios.html" class="btn btn-primary mt-auto w-100" aria-label="Acesse a página de Acessórios">Acesse Já</a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Adicione isso antes da tag </body> -->
-<div vw class="enabled">
-  <div vw-access-button class="active"></div>
-  <div vw-plugin-wrapper>
-    <div class="vw-plugin-top-wrapper"></div>
-  </div>
-</div>
-<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-<script>
-  new window.VLibras.Widget('https://vlibras.gov.br/app');
-</script>
+  </main>
 
-
+  <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-<footer class="footer text-center">
-  <div class="container">
-      <h5>GeekStore</h5>
+
+  <footer class="footer text-center">
+    <div class="container">
+      <h5 class="mb-3">GeekStore</h5>
       <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
-      <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a
-              href="camisetas.html">Camisetas</a> | <a href="gamers.html">Gamers</a> | <a
-              href="acessorios.html">Acessórios</a></p>
+      <nav aria-label="Links do rodapé" class="mb-3">
+        <a href="index.html">Home</a> |
+        <a href="parcerias.html">Parcerias</a> |
+        <a href="camisetas.html">Camisetas</a> |
+        <a href="gamers.html">Gamers</a> |
+        <a href="acessorios.html">Acessórios</a>
+      </nav>
       <p>Desenvolvido por Lucas</p>
-  </div>
-  </div>
-  <div class="container mt-2 pt-22">
-      <p text-muted>Siga-nos nas redes sociais</p>
-      <div class="social-icons">
-          <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-secondary"><i
-                  class="bi bi-instagram"></i></a>
-          <a href="https://twitter.com/" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
-          <a href="https://www.youtube.com/" class="btn btn-secondary"><i class="bi bi-youtube"></i></a>
-          <a href="https://www.tiktok.com/" class="btn btn-secondary"><i class="bi bi-tiktok"></i></a>
+      <p class="mt-3 mb-1 text-uppercase fw-semibold" style="letter-spacing: 1.5px;">Siga-nos nas redes sociais</p>
+      <div class="social-icons d-flex justify-content-center" role="list">
+        <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-link" role="listitem" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://twitter.com/" class="btn btn-link" role="listitem" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.youtube.com/" class="btn btn-link" role="listitem" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.tiktok.com/" class="btn btn-link" role="listitem" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
       </div>
-  </div>
- 
- 
-</footer>
+    </div>
+  </footer>
+</body>
 
 </html>
