--- a/menu.html
+++ b/menu.html
@@ -39,16 +39,16 @@
             </ul>
 
             <form class="d-flex" role="search"
-                onsubmit="event.preventDefault(); alert('Pesquisar: ' + this.querySelector('input').value)">
+                    action="https://www.google.com/search" method="get" target="_blank">
                 <input class="form-control form-control-sm me-2" type="search" placeholder="Pesquisar"
                     aria-label="Pesquisar">
                 <button class="btn btn-outline-success btn-sm" type="submit">Buscar</button>
             </form>
-
+        </div>
 
             <!-- Ícones de carrinho e login -->
             <div class="d-flex">
-                <a href="login.html" class="btn btn-outline-secondary">
+                <a href="login_cadastro.html" class="btn btn-outline-secondary">
                     <i class="bi bi-person"></i>
                 </a>
             </div>
