--- a/parcerias.html
+++ b/parcerias.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="Imagens/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Parcerias | GeekStore</title>
 
@@ -12,8 +13,6 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
-    
-
     .section-title {
       font-weight: bold;
       font-size: 2rem;
@@ -61,7 +60,8 @@
     <section class="mb-5">
       <div class="card p-4">
         <h1 class="section-title"><i class="bi bi-people-fill icon-title"></i>Parcerias</h1>
-        <p class="lead">Na <strong>GeekStore</strong>, acreditamos que parcerias são fundamentais para o sucesso. Se você quer ser nosso parceiro, fale com a gente!</p>
+        <p class="lead">Na <strong>GeekStore</strong>, acreditamos que parcerias são fundamentais para o sucesso. Se
+          você quer ser nosso parceiro, fale com a gente!</p>
       </div>
     </section>
 
@@ -94,7 +94,8 @@
           </div>
           <div class="col-12">
             <label for="mensagem" class="form-label">Mensagem</label>
-            <textarea class="form-control" id="mensagem" rows="4" placeholder="Conte-nos como deseja colaborar..."></textarea>
+            <textarea class="form-control" id="mensagem" rows="4"
+              placeholder="Conte-nos como deseja colaborar..."></textarea>
           </div>
           <div class="col-12 text-end">
             <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
@@ -127,43 +128,41 @@
       </div>
     </section>
   </main>
-    <!-- Adicione isso antes da tag </body> -->
-<div vw class="enabled">
-  <div vw-access-button class="active"></div>
-  <div vw-plugin-wrapper>
-    <div class="vw-plugin-top-wrapper"></div>
+
+  <!-- Adicione isso antes da tag </body> -->
+   <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
   </div>
-</div>
-<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-<script>
-  new window.VLibras.Widget('https://vlibras.gov.br/app');
-</script>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
 
 
-
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<footer class="footer text-center">
+  <footer class="footer text-center">
     <div class="container">
-        <h5>GeekStore</h5>
-        <p>&copy; 2023 GeekStore. Todos os direitos reservados.</p>
-        <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a
-                href="camisetas.html">Camisetas</a> | <a href="gamers.html">Gamers</a> | <a
-                href="acessorios.html">Acessórios</a></p>
-        <p>Desenvolvido por Lucas</p>
+      <h5>GeekStore</h5>
+      <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
+      <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a href="camisetas.html">Camisetas</a>
+        | <a href="gamers.html">Gamers</a> | <a href="acessorios.html">Acessórios</a></p>
+      <p>Desenvolvido por Lucas</p>
     </div>
     </div>
     <div class="container mt-2 pt-22">
-        <p text-muted>Siga-nos nas redes sociais</p>
-        <div class="social-icons">
-            <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-secondary"><i
-                    class="bi bi-instagram"></i></a>
-            <a href="https://twitter.com/" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
-            <a href="https://www.youtube.com/" class="btn btn-secondary"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.tiktok.com/" class="btn btn-secondary"><i class="bi bi-tiktok"></i></a>
-        </div>
+      <p text-muted>Siga-nos nas redes sociais</p>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-secondary"><i class="bi bi-instagram"></i></a>
+        <a href="https://twitter.com/" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.youtube.com/" class="btn btn-secondary"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.tiktok.com/" class="btn btn-secondary"><i class="bi bi-tiktok"></i></a>
+      </div>
     </div>
-   
-</footer>
+  </footer>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </html>
